--- a/Investigating Movies dataset --.ipynb
+++ b/Investigating Movies dataset --.ipynb
@@ -40,7 +40,7 @@
     "The data will be prepared by selecting the important columns that are useful in our analysis, checking null values and removing them if their count is not significant, otherwise, they will be replaced by the median. Finally, the columns with multiple categorical values will be replaced by get dummies.\n",
     "#### Data Modeling\n",
     "In this part, we will just use simple statistical steps (e.g. grouping, sorting values, getting the maximum and minimum values, and calculating the mean).\n",
-    "### Results\n",
+    "#### Results\n",
     "Results will be visualized. For future work, we might discover the relationship between the voting and properties other than the genres.\n"
    ]
   },
